Continued adding debug code

--- a/dmunitcrypt.lfm
+++ b/dmunitcrypt.lfm
@@ -1,10 +1,10 @@
 object dmCrypt: TdmCrypt
-  Left = 0
-  Height = 150
-  Top = 0
-  Width = 150
   OnCreate = DataModuleCreate
-  LCLVersion = '1.2.2.0'
+  OldCreateOrder = False
+  Height = 150
+  HorizontalOffset = 471
+  VerticalOffset = 226
+  Width = 150
   object DCP_Twofish: TDCP_twofish
     Id = 6
     Algorithm = 'Twofish'
