--- a/formunitstartdialog.lfm
+++ b/formunitstartdialog.lfm
@@ -1017,4 +1017,8 @@ object formStartDialog: TformStartDialog
     left = 892
     top = 16
   end
+  object PopupMenu1: TPopupMenu
+    left = 215
+    top = 125
+  end
 end
